add view numerical inegral

--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -68,8 +68,8 @@
                                 <ul>
                                     <li class="dropdown-header">Численное интегрирование</li>
                                     <li><a href="@Url.Action("MathCalc", "Methods")">Метод прямоугольников</a></li>
-                                    <li><a href="#">Метод трапеций</a></li>
-                                    <li><a href="#">Метод парабол (метод Симпсона)</a></li>
+                                    <li><a href="@Url.Action("Trapezoids", "Methods")">Метод трапеций</a></li>
+                                    <li><a href="@Url.Action("Simpson", "Methods")">Метод парабол (метод Симпсона)</a></li>
                                     <li><a href="#">Метод 3/8</a></li>
 
                                     <li class="divider"></li>
