--- a/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
+++ b/MathСalculator.WebUI/Views/Shared/_Layout.cshtml
@@ -75,6 +75,7 @@
                                     <li class="divider"></li>
                                     <li class="dropdown-header">Онлайн сервисы</li>
                                     <li><a href="@Url.Action("MathCalc", "Methods")">Калькулятор</a></li>
+                                    <li><a href="@Url.Action("Graph", "Methods")">График функции</a></li>
                                 </ul>
                             </li>
                             <li class="col-sm-3">
