--- a/MathСalculator.WebUI/Views/Methods/Simpson.cshtml
+++ b/MathСalculator.WebUI/Views/Methods/Simpson.cshtml
@@ -85,7 +85,7 @@
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
-<div class="alert alert-link" role="alert">
+<div class="alert alert-success" role="alert">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
     Пример ввода операторов и функций:
     <br />
@@ -108,7 +108,7 @@
 
     <div style="margin-left: 22%;">
         <div class="col-lg-9 col-md-10 col-sm-2 col-xs-11">
-            <div class="panel panel-default">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3 class="panel-title">Введите начальные данные</h3>
                 </div>
@@ -161,9 +161,9 @@
 
 
 <style>
-    body {
+    /*body {
         background-color: #CECDD5;
-    }
+    }*/
 
     #myInput {
         width: 20px; /* Ширина поля в пикселах */
@@ -180,3 +180,4 @@
         width: 600px;
     }
 </style>
+
